# dugnutt

./: README.md  dugnutt.cabal  stack.yaml  usecases-features.txt
cli/: Main.hs
lib/: Dugnutt.hs
lib/Dugnutt/: Actions.hs  Domain.hs  FFree.hs  Loggable.hs  LookupNameQuery.hs  PopulateRootNameservers.hs  Query.hs  QuerySpecificAddress.hs  RRText.hs  RecursiveLookup.hs
