name:                dugnutt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dugnutt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Dugnutt
                     , Dugnutt.LookupNameQuery
                     , Dugnutt.PopulateRootNameservers
                     , Dugnutt.Query
                     , Dugnutt.QuerySpecificAddress
                     , Dugnutt.RecursiveLookup

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , dns
                     , iproute
                     , network
                     , split
  default-language:    Haskell2010

executable dugnutt
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dugnutt
  default-language:    Haskell2010

test-suite dugnutt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dugnutt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benclifford/dugnutt
